2001-05-01  Ken Raeburn  <raeburn@mit.edu>

	* update_utmp.c (pty_update_utmp): Fix typo (OWRONLY ->
	O_WRONLY).

2001-05-01  Ezra Peisach  <epeisach@mit.edu>

	* update_wtmp.c (ptyint_update_wtmpx): Add missing semi-colon in
 	code path if PTY_UTMP_E_EXIT and PTY_UTMPX_E_EXIT exist.

2001-04-30  Tom Yu  <tlyu@mit.edu>

	* configure.in: Fix some quoting of shell variables when passing
	to "test".  Reorder some logic in consistency checks to validate
	cache variables against "yes" to account for possible empty or
	nonexistent values.

	* pty-int.h: Fix conditional prototype of update_wtmp().

	* update_wtmp.c: Fix conditional compilation of update_wtmp() to
	cover the case where we have setutxent() but don't have updwtmpx()
	and WTMPX_FILE, as is the case on some Linux installations.

2001-04-27  Tom Yu  <tlyu@mit.edu>

	* configure.in(K5_CHECK_UT_MEMBER): Fix typo in previous; make
	sure to include the correct header when checking structure
	members.

	* configure.in: Many changes to support the rewriting of the utmp
	pieces of libpty.  Do a large amount of checking for consistency
	of various utmp and utmpx APIs as currently understood.  See rant
	in update_utmp.c.

	* dump-utmp.c: Rewrite; now has capability to use utmp{,x}name()
	to extract entries from utmp and utmpx files.  Adjusts field
	widths when printing as appropriate.

	* libpty.h: Update call signature for update_utmp() and logwtmp();
	make prototypes unconditional.

	* logwtmp.c: Rewrite.  Use pututline() or pututxline() API
	whenever possible.

	* pty-int.h: Update call signatures for update_wtmp{,x}(); make
	prototypes unconditional.

	* sane_hostname.c: Use the autoconf-correct macro names.

	* update_utmp.c: Rewrite.  Basically, use functions from the
	pututline() or pututxline() API whenever possible, to avoid
	lossage.  Inserted large rant about the conjectured history of BSD
	utmp, sysV utmp, and utmpx, as well as documentation about some
	known quirks.
